Fixed smilies mis-alignments

--- a/mod_shoutbox/media/css/mod_shoutbox.css
+++ b/mod_shoutbox/media/css/mod_shoutbox.css
@@ -114,6 +114,11 @@
 #jjshoutboxform .dropdown-menu {
 	padding: 5px !important;
 }
+#jjshoutboxform .dropdown-menu li {
+	float: left;
+	padding: 0 2px;
+	min-height: 26px;
+}
 .jj_smiley {
     border: none;
 	cursor: pointer;
